<resources>
    <string name="app_name">Hangman Game</string>
    <string name="nb_victories">NB VICTORIES:</string>
    <string name="nb_games">NB GAMES:</string>
    <string name="initial_result">0</string>
    <string name="reset">RESET</string>
    <string name="next_guess">My next guess:</string>
    <string name="try_guess">Try to guess the word !</string>
    <string name="ok">OK</string>
    <string name="hint_letter_to_guess">"?"</string>
    <string name="play_again">NEW GAME</string>
    <string name="exit">EXIT GAME</string>
    <string name="you_scored">Congratulation!\n%1$d wins out of %2$d attempts</string>
    <string name="you_loose">You have lost this game!\nThe word was \"%s\"</string>
    <plurals name="tries_left">
        <item quantity="zero">No tries left !</item>
        <item quantity="one">You have 1 try left…</item>
        <item quantity="other">You have %d tries left…</item>
    </plurals>
</resources>