<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblVictories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nb_victories"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/txtVictories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/lblVictories"
        android:layout_marginStart="5dp"
        android:text="@string/initial_result"
        />

    <TextView
        android:id="@+id/lblGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nb_games"
        app:layout_constraintTop_toBottomOf="@id/lblVictories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/txtGames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/lblGames"
        app:layout_constraintStart_toEndOf="@id/lblGames"
        android:layout_marginStart="5dp"
        android:text="@string/initial_result"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>