<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        >

        <TextView
            android:id="@+id/lblGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_guess"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtCharToSubmit"
            />

        <EditText
            android:id="@+id/txtCharToSubmit"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/txtCharToSubmit"
            android:layout_margin="@dimen/fab_margin"
            android:inputType="text|textCapCharacters"
            android:maxLength="1"
            android:textSize="30sp"
            android:textAlignment="center"
            android:hint="@string/hint_letter_to_guess"
            android:importantForAutofill="no"
            />

        <Button
            android:id="@+id/btnSubmitChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtCharToSubmit"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>